src/tests/invalidframingconfig/data/xfosameoriginnoframeancestorsself.tmpl
<!DOCTYPE html>
<title>Invalid framing configuration</title>
X-Frame-Options SAME-ORIGIN is set but there is no CSP frame-ancestors 'self'
entry.